src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__attachment_panel__tests__snapshot_three_items_first_selected_focused.snap
---
source: src/tui/widgets/attachment_panel.rs
expression: output
---
📎 screenshot.png (42 KB) ✕
📎 report.pdf (1.2 MB) ✕
📎 data.csv (8 KB) ✕
